--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -3,53 +3,61 @@
 Dans ce document
 
 - lancer un container avec une distribution Ubuntu
-- Linux 101
 
-## Linux Alpine
+## Ubuntu + Docker
 
-Linux existe en beaucoup de versions. La plus commune est Ubuntu.
+Linux existe en beaucoup de versions. La plus commune est **[Ubuntu](https://ubuntu.com/)**.
 
-Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian.
+Il y a plus de 600 distributions Linux active.
 
-On va utiliser la plus classique, Ubuntu.
+- Ubuntu est la plus répandu avec 34%
+- suivi par Debian.
 
-Dans un terminal
+Dans un terminal, executez la commande docker run en spécifiant l'image, et une commande a executer ddans le container.
 
 ```bash
 docker run -i -t ubuntu /bin/bash
 ```
 
-[TODO] Expliquer la syntaxe de la commande
+Cette commande est composée de
 
-Qu'observe t on ?
+- `docker run` pour lancer un container
+- `-it` des flags de configuration
+- le nom de l'image `ubuntu`
+- la commande à executer dans le container `/bin/bash` qui ouvre une session dans un terminal
 
 Docker:
 
-- ne trouve pas l'image de Ubuntu localement, il va donc la récupérer sur un repository Docker Hub
-- Il crée un container
-- le démarre et execute: /bin/bash
+- ne trouve pas l'image de Ubuntu localement, il va donc la récupérer sur Docker Hub
+- Il crée et démarre un container
+- il execute: /bin/bash dans le container
 
-Si tout fonctionne bien
-on voit le prompt par défaut sur une distribution Ubuntu:
+Si tout fonctionne bien, on voit alors le prompt par défaut sur une distribution Ubuntu:
 
 ```bash
 root@45f1bbf4d38d:/#
 ```
 
-Le prompt est de la forme user@containerid:<current working directory>#
+Le prompt est de la forme `user@container_id:<current working directory>#`
 
-Notez que le user ici est **root**.
+- Notez que le user ici est **root**.
+- le container_id est celui que l'on observe avec `docker ps`
+- le repertoire actuel est la racine du container: `/`
+- enfin le prompt ce fini par `#` indiquant qu'on est dans une session `root` et non pas utilisateur simple.
 
-Verifions la version de l'OS avec  ```lsb_release```
+Vérifions la version de Ubuntu avec la commande `lsb_release` qui n'est pas installé par défaut dans Ubuntu. On doit donc d'abord l'installer avec `apt-get` le package manager de Ubuntu.
 
 ```bash
-# On doit d'abord installer lsb-release
 apt-get update && apt-get install -y lsb-release
-# pour pouvoir l'executer
+```
+
+On peut ensuite l'exécuter
+
+```bash
 lsb_release -a
 ```
 
-Cette commande retourne un résultat similaire à:
+Le résultat doit être similaire à :
 
 ```bash
 No LSB modules are available.
@@ -59,10 +67,9 @@ Release: 24.04
 Codename: noble
 ```
 
-On a donc installé la version 24.04 de Ubuntu.
-Par défaut docker va recuperer la derniere version d'une image (tag: latest)
+Ce qui confirme qu'on est bien sur la version 24.04 de Ubuntu.
 
-Pour sortir du container
+Pour sortir du container et l'arrêter :
 
 ```bash
 exit
@@ -73,13 +80,22 @@ Le container est stoppé mais il existe toujours. Il n'a pas été supprimé.
 On peut le verifier avec ```docker ps -all```
 
 ```bash
-CONTAINER ID   IMAGE              COMMAND                  CREATED        STATUS                     PORTS     NAMES
-45f1bbf4d38d   ubuntu             "/bin/bash"              21 hours ago   Exited (0) 2 seconds ago             awesome_hypatia
+CONTAINER ID   IMAGE              COMMAND                  CREATED
+45f1bbf4d38d   ubuntu             "/bin/bash"              21 hours ago
+
+STATUS                            PORTS     NAMES
+Exited (0) 2 seconds ago                    awesome_hypatia
 ```
 
 Le status est : **Exited (0) 2 seconds ago**
 
-On peut rédemarer le container avec la commande
+### Sortir du container sans le stopper
+
+En enchaînant `CTRL+p` et `CTRL+q`, on sort du container sans l'arrêter. Le vérifier avec `docker ps`.
+
+### Redémarrer le container
+
+On peut redémarrer le container avec la commande
 
 ```bash
 docker start 45f1bbf4d38d
@@ -87,7 +103,7 @@ docker start 45f1bbf4d38d
 
 le STATUS devient: **Up 2 seconds**.
 
-Et pour retourner dans la  session ubuntu on utilise la commande ```attach```:
+Et pour retourner dans la  session ubuntu on utilise la commande `attach`:
 
 ```bash
 docker attach 45f1bbf4d38d
@@ -97,10 +113,11 @@ On est à nouveau dans la session Ubuntu
 
 ### Docker Desktop
 
-Vous pouvez acceder au container dans **Docker Desktop**
+Vous pouvez accéder au container dans **Docker Desktop**
+
 Cliquez sur le nom du container et le tab terminal
 
-![](./../../img/docker-desktop-terminal.png)
+![](./../../img/docker-desktop-ubuntu-terminal.png)
 
 ### Les flags -i et -t
 
@@ -112,52 +129,51 @@ Le help donne les infos
 docker run --help
 ```
 
-- ```-t, --tty: Allocate a pseudo-TTY```
+- ```-t, --tty: Allocate a pseudo-TTY``` \
 le flag `-t` ou `--tty` simule un **terminal interactif** (`tty`) dans le conteneur.
-- ```-i, --interactive: Keep STDIN open even if not attached```
+- `-i, --interactive: Keep STDIN open even if not attached` \
 Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert
 même quand le conteneur n'est pas attaché à un **terminal interactif**.
 
 Les 2 flags sont souvent utilisés ensemble.
 
-Si on oublie l'un ou l'autre des 2 flags
-
-```bash
-docker run ubuntu /bin/bash
-```
-
-Le container est executé mais on y a pas acces dans le même terminal.
-(on peut passer par Docker Desktop)
-
-- avec seulement -i
-le terminal ne redonne pas la main
-
-- avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
-
-[TODO] Pourquoi on peut seulement utiliser -t
+### Et maintenant ?
 
 Une fois dans la session ubuntu:
 
 - `pwd` donne le path du working directory. le directory courant
-- `ls` liste les directlry et ficheirs. Essayez aussi `ls -al` et ```ll```
+- `ls` liste les directory et fichiers.
+- Essayez aussi `ls -al` et `ll`
 
-## Le mode detached
+### Différents modes d'execution des commandes dans un container
 
-Detached mode (-d flag):
+On peut executer une commande sur un container qui tourne sans rentrer dedans.
 
-The container runs in the background
-You get your terminal prompt back immediately
-Output from the container isn't displayed in your current terminal
+Par exemple la commande `pwd`
 
-Foreground mode (default, without -d):
+```bash
+docker exec 45f1bbf4d38d pwd
+```
 
-The container runs in the foreground
-Your terminal is attached to the container's standard input, output, and error
-You see the output in real-time, but your terminal is occupied
+Si le container est stoppé, il faut le démarrer, executer la commande puis le stopper à nouveau
 
-### executer une commande sur un container qui tourne
+```bash
+docker start 45f1bbf4d38d
+docker exec 45f1bbf4d38d pwd
+docker stop 45f1bbf4d38d
+```
 
-On peut aussi passer une commande au ```bash``` de Ubuntu sans le faire manuellement dans le terminal du container.
+Si le container tourne, on re-rentre dans le terminal avec
+
+```bash
+docker start -i 45f1bbf4d38d
+```
+
+le flag `-i` permet de rester dans la session dans le terminal du host.
+
+### executer une commande sur une image
+
+Le flag `-c` permet d'executer une commande dans ```bash``` de l'image Ubuntu sans le faire manuellement dans le terminal du container.
 
 ```bash
 docker run ubuntu /bin/bash -c <commande>
@@ -175,14 +191,73 @@ ou
 docker run ubuntu /bin/bash -c ls
 ```
 
+Mais cela crée à chaque fois un nouveau container.
+
+Le flag `-rm` permet de supprimer le container dès que la commande est réalisée.
+
+```bash
+docker run --rm ubuntu /bin/bash -c pwd
+```
+
+Note: la différence entre les options courtes qui sont précédées d'un unique tiret `-` comme pour `-c`
+et les options dites longues qui sont précédées de 2 tirets `-` comme pour `--rm`.
+
 ### En résumé
 
-- Il est facile de lancer un container ubuntu avec docker run
-- et d'acceder au terminal interne du container soit avec desktop, soit avec les flags `-it`
+- Il est facile de lancer un container Ubuntu avec `docker run`
+- et d'accéder au terminal interne du container avec les flags `-it`
 - `docker <command> --help` permet d'avoir la liste des flags que l'on peut utiliser pour la commande
-- les commandes suivantes seront utiles
-  - docker run -it
-  - docker start | stop
-  - docker attach
+- les commandes suivantes seront utiles par la suite
+  - docker run -it \<image name\>
+  - docker start | stop \<container_id\>
+  - docker attach -i \<container_id\>
   - docker ps | docker ps -a
   - docker images
+  - docker exec \<container_id\> \<command\>
+
+### Exercice
+
+1. **Téléchargez l'image Debian**
+   - Utilisez la commande Docker appropriée pour télécharger la dernière image Debian.
+
+2. **Exécutez un conteneur Debian**
+   - Démarrez un conteneur Debian interactif avec un shell bash.
+   - Une fois à l'intérieur du conteneur, exécutez les commandes suivantes :
+     - `pwd` (pour voir le répertoire courant)
+     - `ls` (pour lister le contenu du répertoire courant)
+     - `cat /etc/os-release` (pour vérifier que vous êtes dans un environnement Debian)
+   - Quittez le conteneur.
+
+3. **Listez les conteneurs**
+   - Affichez tous les conteneurs (en cours d'exécution et arrêtés).
+   - Notez l'ID du conteneur Debian que vous avez lancé.
+
+4. **Démarrez le conteneur arrêté**
+   - Utilisez l'ID du conteneur pour démarrer le conteneur Debian que vous venez de quitter.
+
+5. **Exécutez des commandes dans le conteneur en cours d'exécution**
+   - Utilisez `docker exec` pour exécuter la commande `uname -a` dans le conteneur Debian.
+
+6. **Attachez-vous au conteneur en cours d'exécution**
+   - Attachez-vous au conteneur Debian en cours d'exécution.
+   - Exécutez quelques commandes Linux simples comme `date`, `whoami` et `hostname`.
+   - Quittez le conteneur sans l'arrêter (Astuce : Utilisez la séquence d'échappement).
+
+7. **Arrêtez le conteneur**
+   - Arrêtez le conteneur Debian en cours d'exécution.
+
+8. **Supprimez le conteneur**
+   - Supprimez le conteneur Debian arrêté.
+
+9. **Listez les images**
+   - Affichez toutes les images Docker sur votre système.
+
+10. **Exécutez un conteneur temporaire**
+    - Exécutez un nouveau conteneur Debian qui lance la commande `echo "Hello from Debian!"` et se supprime automatiquement après son exécution.
+    - Vérifiez que le conteneur n'apparaît pas dans `docker ps -a` une fois terminé.
+
+## Questions Bonus
+
+1. Quelle est la différence entre utiliser `docker run` avec `-it` et sans ?
+2. En quoi `docker exec` diffère de `docker attach` ?
+3. Que fait l'option `--rm` lorsqu'elle est utilisée avec `docker run` ?
