--- a/docs/02/S02.03.linux.md
+++ b/docs/02/S02.03.linux.md
@@ -1,39 +1,38 @@
-## Linux
+# Linux
 
-Linux - crash course
+![](./../../img/Tux.svg.png)
 
-### Linux rules the world 
+## Linux rules the world
 
 - Parce que Docker est construit sur linux
-- Les 2 tiers ou plus des serveurs web sont du Linux 
+- Les 2 tiers ou plus des serveurs web sont du Linux
 - La majorité des images docker sont construites sur une image de base linux
 
 Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian
 
-![](./../../img/Tux.svg.png)
+Linux c'est :
 
-Linux c'est 
-- internet
+- Internet
 - les mobiles (android est du linux)
-- la science : NASA, ESA, CERN, Super computers etc 
+- la science : NASA, ESA, CERN, Super computers etc
 - [Tesla](https://rechargd.com/tesla-operating-system/) tourne sur une version propre de Linux
 
-la liste est longue
+La liste est longue, très longue
 
-### distros
+### Distributions ou distro
 
-plus de 600 distributions! appelées distro
+Plus de 600 distributions!
 
-* Ubuntu
-* Debian
-* Redhat
-* Kali, Fedora, Suse, Alpine, Black Arch, ... 
+- Ubuntu
+- Debian
+- Redhat
+- Kali, Fedora, Suse, Alpine, Black Arch, ..., Mandrake
 
-Une distribution linux 
-est un OS (operating system) construit sur le noyau linux.
+Une distribution linux est un OS (operating system) construit sur le noyau linux.
 
 Une Linux distro contient générallement:
-- Le noyau linux: 
+
+- Le noyau linux:
 
 - **Linux Kernel** : Le cœur du système d'exploitation, qui gère les ressources du système et permet la communication entre le matériel et les logiciels.
 - **GNU Tools** : Ce sont des outils et bibliothèques essentiels qui rendent le système utilisable (souvent appelé système GNU/Linux).
@@ -45,47 +44,47 @@ Une Linux distro contient générallement:
 
 ![](./../../img/what-are-clouds-made-of.png)
 
-
-* 1991 [Linus Torvalds](https://fr.wikipedia.org/wiki/Linus_Torvalds), étudiant à l'université d'Helsinki, crée le Noyau Linux. (Il a aussi crée Git)
+- 1991 [Linus Torvalds](https://fr.wikipedia.org/wiki/Linus_Torvalds), étudiant à l'université d'Helsinki, crée le Noyau Linux. (Il a aussi crée Git)
 
 ![](./../../img/Linus_Torvalds.jpeg)
 
 Lire :
-* <https://fr.wikipedia.org/wiki/Linux>
-* <https://en.wikipedia.org/wiki/History_of_Linux>
 
+- <https://fr.wikipedia.org/wiki/Linux>
+- <https://en.wikipedia.org/wiki/History_of_Linux>
 
 ## Linux Basics Workshop for Docker Course
 
-Nous avons donc accés a un container Linux :) 
+Nous avons donc accés a un container Linux :)
 
 Que pouvons nous faire et comment ca marche ?
 
-Dans la suite de ce document on va 
+Dans la suite de ce document on va
 
 - travailler sur les repertoires et fichiers
-    - naviguer dans le systeme de fichier
-    - Modifier, copier, creer, supprimer les fichier et repertoires
-    - Voir et editer les fichiers textes
-    - Modifier les permissions et accès d'un fichier
-    - installer des programmes avec le package manager
-    - observer les process
-    - et configurer un server web nginx
-    
+  - naviguer dans le systeme de fichier
+  - Modifier, copier, creer, supprimer les fichier et repertoires
+  - Voir et editer les fichiers textes
+  - Modifier les permissions et accès d'un fichier
+  - installer des programmes avec le package manager
+  - observer les process
+  - et configurer un server web nginx
+
 Let's go!
 
-## 1. Commandes de base Linux 
+## 1. Commandes de base Linux
 
 Commencons par supprimer tous les containers que nous avons pu créer
 
-Dans Docker Desktop > containers 
+Dans Docker Desktop > containers
+
 - selectionnez tout
-- cliquez sur le bouton stop 
+- cliquez sur le bouton stop
 - et supprimez tous les containers
 
 La commande `docker ps -all` ne doit retourner aucune ligne.
 
-Dans un terminal powershell ou iTerm créez et lancez un container ubuntu avec 
+Dans un terminal powershell ou iTerm créez et lancez un container ubuntu avec
 
 ```bash
 docker run -it ubuntu /bin/bash
@@ -93,13 +92,12 @@ docker run -it ubuntu /bin/bash
 
 ### sortir et revenir dans le container
 
-Si on sort du container avec `exit`, le container existe toujours mais ne tourne plus. 
+Si on sort du container avec `exit`, le container existe toujours mais ne tourne plus.
 
 On peut le voir: `docker ps`  liste bien le container avec comme status **UP** .
 Si le container etait stoppé, `docker ps -all` donnerait un status : "Exited"
 
-
-La commande `docker run -it ubuntu /bin/bash` va creer un nouveau container. Ce n'est pas ce que l'on souhaite. 
+La commande `docker run -it ubuntu /bin/bash` va creer un nouveau container. Ce n'est pas ce que l'on souhaite.
 On souhaite se réattacher au container existant.
 
 On trouve l'ID du container avec `docker ps`. ici ```45f1bbf4d38d```
@@ -112,12 +110,11 @@ On se _reconnecte_ au container avec :
 docker exec -it <container ID> /bin/bash
 ```
 
-
 Note: On peut aussi d'abord redémarrer le container puis s'y attacher
 
 ```bash
-docker start <container ID> 
-docker attach <container ID> 
+docker start <container ID>
+docker attach <container ID>
 ```
 
 Dans les 2 cas, on retrouve le prompt de la session Ubuntu.
@@ -126,7 +123,7 @@ Dans les 2 cas, on retrouve le prompt de la session Ubuntu.
 root@45f1bbf4d38d:/#
 ```
 
-l'architecture des répertoires d'une repo linux est stable pour toute les distro linux. 
+l'architecture des répertoires d'une repo linux est stable pour toute les distro linux.
 
 Je vous laisse lire la signification et le role de chaque repertoire.
 
@@ -136,21 +133,23 @@ Je vous laisse lire la signification et le role de chaque repertoire.
 or as webp
 ![](./../../img/standard-unix-filesystem-hierarchy-1.webp)
 
-## 2. File System Navigation 
+## 2. File System Navigation
 
 ### user et super user
 
-Notez que vous etes loggué comme root 
+Notez que vous etes loggué comme root
 
 ```bash
 root@45f1bbf4d38d:/#
 ```
 
-Root est le super user. Il peut tout faire. 
-Il peut même supprimer tout avec la fameuse commande 
+Root est le super user. Il peut tout faire.
+Il peut même supprimer tout avec la fameuse commande
+
 ```bash
 rm -rf /
 ```
+
 **Attention a ne jamais executer cette commande!**
 
 Normallement on ne travaille jamais sur le compte root. Jamais.
@@ -158,14 +157,16 @@ Normallement on ne travaille jamais sur le compte root. Jamais.
 Mais comme notre container Ubuntu n'a pas pour vocation d'avoir des utilisateurs externes, nous allons exceptionnellement travailler en tant que root.
 
 Un utilisateur ubuntu  a ete crée
-on peut se connecter avec le user ubuntu avec 
+on peut se connecter avec le user ubuntu avec
 
 se connecter avec le user ubuntu
+
 ```bash
 su - ubuntu
 ```
 
 Le prompt change
+
 ```bash
 ubuntu@45f1bbf4d38d:~$
 ```
@@ -177,17 +178,18 @@ Enfin la commande `whoami` (lit. qui suis je?) retourne le nom de l'utilisateur 
 ![](./../../img/whoami.png)
 
 Pour revenir a root:
-```bash 
+
+```bash
 exit
 ```
 
 ### Se deplacer dans les repertoires
 
-Pour se deplacer dans les repertoires on utilise les commandes 
+Pour se deplacer dans les repertoires on utilise les commandes
 
-- `pwd`: Path to Working Directory: le repertoire courant 
+- `pwd`: Path to Working Directory: le repertoire courant
 - `ls`: liste les fichiers. Utile avec les flags -al et -alh. un alias est souvent disponible : `ll`
-- `cd`: change directory 
+- `cd`: change directory
 
 Quelques commandes pour les fichers et repertoires:
 
@@ -196,7 +198,6 @@ Quelques commandes pour les fichers et repertoires:
 - Copying files and directories (cp)
 - Moving/renaming files and directories (mv)
 - Removing files and directories (rm, rmdir)
-
 
 ### noms de fichiers
 
@@ -216,7 +217,7 @@ My Project Report (Final Version).pdf  # espaces
 -start-with-hyphen.txt  # commence par un -
 ```
 
-Allez dans le repertoire /home/, lieu des comptes utilisateurs et faites `ls -al` : 
+Allez dans le repertoire /home/, lieu des comptes utilisateurs et faites `ls -al` :
 
 ```bash
 total 20
@@ -224,12 +225,12 @@ drwxr-xr-x 1 root   root   4096 Aug 27 16:06 .
 drwxr-xr-x 1 root   root   4096 Sep 26 10:51 ..
 drwxr-x--- 1 ubuntu ubuntu 4096 Sep 26 13:32 ubuntu
 ```
-Le container ne contient qu'un utilisateur: ubuntu. 
+
+Le container ne contient qu'un utilisateur: ubuntu.
 
 ```bash
 cd ubuntu
 ```
-
 
 ## 4. Voir le contenu des fichiers sans les ouvrir
 
@@ -243,18 +244,22 @@ avec `cat`, on peut afficher le contenue de ces fichiers directement dans le ter
 
 executez l'un apres l'autre:
 
-* cat .bashrc
-* cat .bash_logout
-* cat .profile
+- cat .bashrc
+- cat .bash_logout
+- cat .profile
 
 on a les premieres lignes
+
 - # ~/.bashrc: executed by bash(1) for non-login shells. Every time you open a new terminal session (without logging in, such as launching a terminal from your desktop)
-- # ~/.bash_logout: executed by bash(1) when login shell exits.
-- # ~/.profile: executed by the command interpreter for login shells.
 
-When you log in to the system (e.g., via SSH, console login, or switching to a virtual console), the shell reads .profile or .bash_profile (depending on the system setup). 
+- # ~/.bash_logout: executed by bash(1) when login shell exits
 
-Pour voir les N premieres ou N dernieres lignes d'un fichier on utilise  
+- # ~/.profile: executed by the command interpreter for login shells
+
+When you log in to the system (e.g., via SSH, console login, or switching to a virtual console), the shell reads .profile or .bash_profile (depending on the system setup).
+
+Pour voir les N premieres ou N dernieres lignes d'un fichier on utilise
+
 - `head -n N <nom du fchier>`
 - `tail -n N <nom du fchier>`
 
@@ -264,13 +269,13 @@ on peut enchainer les commandes avec le symbole pipe '|'
 head -n 200 fichier.txt | tail -n 10
 ```
 
-Donne les 10 lignes 190 a 199 du fichier 
+Donne les 10 lignes 190 a 199 du fichier
 
 Pour modifier, editer un fichier on utilise `vim` ou `nano`.
 
 Mais vim n'est pas inclut par defaut dans ubuntu. On va l'installer plus tard.
 
-#### question 
+#### question
 
 dans le repertoire ubuntu on a la config du user ubuntu : .bashrc, .profile etc ...
 
@@ -278,11 +283,9 @@ mais on s'est connecté avec `root`.  ou se trouve donc le .bashrc de root ?
 
 answer : dans le repertoire  `/root` pardi!
 
-
-
 ```bash
 cd /root
-ls -al 
+ls -al
 ```
 
 donne quelques fichiers
@@ -298,9 +301,10 @@ drwx------ 3 root root 4096 Sep 26 13:32 .config
 -rw-r--r-- 1 root root  161 Apr 22 15:04 .profile
 ```
 
-dont .bash_history qui contient l'historique des commandes. 
+dont .bash_history qui contient l'historique des commandes.
 
 ### Grep
+
 Autre commande super puissante : `grep`
 
 ```bash
@@ -309,20 +313,19 @@ grep [OPTION]... PATTERNS [FILE]
 
 par exemple trouver les alias (les racourcis commandes) dans le fichier .bashrc
 
-```bash 
+```bash
 grep alias .bashrc
 ```
 
 retourne les ligne qui contiennent le mot **alias**
 
-le format generale de grep est 
+le format generale de grep est
 
 ```bash
 Usage: grep [OPTION]... PATTERNS [FILE]...
 Search for PATTERNS in each FILE.
 Example: grep -i 'hello world' menu.h main.c
 ```
-
 
 ## 5. File Permissions and Ownership (30 minutes)
 
@@ -331,9 +334,9 @@ Quand on liste les fichiers on voit les permissions de fichier
 -rw-r--r-- 1 ubuntu ubuntu  220 Mar 31 08:41 .bash_logout
 
 le premier charactere represente le type de fichioer
-- - fichier et d pour directory
-ensuite on distingue 3 blocks (owner, group, other) de 3 caracteres 
 
+- - fichier et d pour directory
+ensuite on distingue 3 blocks (owner, group, other) de 3 caracteres
 
 - r  : pour read
 - w pour write
@@ -341,39 +344,39 @@ ensuite on distingue 3 blocks (owner, group, other) de 3 caracteres
 
 si a la place du r, w ou x on a un -: le fichier n'est pas  lisible, ecrivable ou executable pour le o2ner, group ou les autres
 
-Un fchier avec 
+Un fchier avec
 
 -rwxrwxrwx est lisible modificable et surtout executable pa tous les utilisateurs. tres dangereux
 
-on voir aussi 
+on voir aussi
 ubuntu ubuntu : le owner et le group auquel le fichier apaprtient
 
-par xemple 
+par xemple
 touch fichier.txt
 on aura
 -rw-r--r-- 1 root   root      0 Sep 26 09:53 fichier.txt
 
-par ce qu'on est loggué en tant que root 
+par ce qu'on est loggué en tant que root
 
-connectons nous maintenant en tant que user ubuntu 
+connectons nous maintenant en tant que user ubuntu
 
 su - ubuntu
 
-si on cree un autre fichier 
+si on cree un autre fichier
 touch fichier2.txt
 on aura ubtuntu comme owner de fichier2.txt
 
-pour revenir a root 
+pour revenir a root
 > exit
 
-On change les perissions dd'un fichier avec 
-- chmod https://www.gnu.org/software/coreutils/chmod
+On change les perissions dd'un fichier avec
+
+- chmod <https://www.gnu.org/software/coreutils/chmod>
 et l'onwer avec chown
 
 c'est parfois demandé pour les cles SSH
 
-
-### root ou user 
+### root ou user
 
 sudo make me a sandwich
 
@@ -387,48 +390,48 @@ le prmpt doit inclure 'ubuntu'
 Installer un package, un programme, utilise le package manager apt-get
 
 et toujours en 2 temps
-sudo apt-get update 
+sudo apt-get update
 sudo apt-get install
-
 
 ici sudo  veut dire super user
 
-
-task: on veut recuperer un ficheir online 
+task: on veut recuperer un ficheir online
 l'utilitare le plus simple est wget. (curl est plus commpliqué, et plus complet)
 
-mais 
+mais
+
 ```bash
-wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv 
+wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv
 ```
+
 donne : wget unknown
 
-Donc il faut installer wget 
+Donc il faut installer wget
 
-d'abord 
-sudo apt-get upadte 
+d'abord
+sudo apt-get upadte
 
 met a jour la list de package dispo pour que le system ait connaissance des dernieres versions et ed leur depenednces
 n'installe rien (pour cela on fait ensuite sudo apt-get upgrade)
-il faut toujours rrunner cette commaned avant d'installer quelque chose pour etre sure 
+il faut toujours rrunner cette commaned avant d'installer quelque chose pour etre sure
 que le systeme va prendre la version la plus recente du package lors de l'install
 
 Donc pour installer wget
-sudo apt-get wget 
+sudo apt-get wget
 
 mais oh que se passe til ? sudo inconnu
 
 En fait on est sur une version minimaliste de Ubuntu. Donc il n;'y a pas sudo.
 
-Installons sudo 
+Installons sudo
 exit pour revenir a root
 apt-get update
 apt-get install sudo
 
-puis retournons a ;user ubuntu 
-su - ubuntu 
+puis retournons a ;user ubuntu
+su - ubuntu
 
-on voit 
+on voit
 To run a command as administrator (user "root"), use "sudo <command>".
 
 Ah!
@@ -437,7 +440,7 @@ Donc on peut maintenant installer wget
 
 sudo apt-get install wget
 
-et enfin downloader le fichier 
+et enfin downloader le fichier
 
 ### A vous
 
@@ -446,41 +449,40 @@ Voir le contenu d'un fichier de type texte:
 Tout d'abord récupérer le fichier csv avec wget
 
 ```bash
-wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv 
+wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv
 ```
 
 C'est un fichier de quelques centaines de tracks de spotify
 
 En utilisant cat, head et tail ainsi que |, affichez :
 
-- la premiere ligne du fichier 
+- la premiere ligne du fichier
 - les 10 dernieres lignes du fichier
 - lignes 180 a 199 du fichier
 
-* Avec `grep` trouvez tous les tracks de :
-    * Al Di Meola
-    * Youssou N'Dour
+- Avec `grep` trouvez tous les tracks de :
+  - Al Di Meola
+  - Youssou N'Dour
 
-
-* Changez le owner de WorldHits.csv pour ubuntu avec chmod
-* changez les permissions de WorldHits.csv pour que le fichier soit writable par tous le monde: `-rw-rw-rw-`
+- Changez le owner de WorldHits.csv pour ubuntu avec chmod
+- changez les permissions de WorldHits.csv pour que le fichier soit writable par tous le monde: `-rw-rw-rw-`
 
 #### Recap
 
-pour installer quelque chose 
+pour installer quelque chose
 sudo apt-get update
 sudo apt-get install <program / package>
 
 quand on est root, ne pas mettre sudo
 ne pas travailler en tant que root
 
-On veut maintenant installer vim , l'efiteur de texte 
+On veut maintenant installer vim , l'efiteur de texte
 
-on peut chercher les pakacge s dispo pour vim 
+on peut chercher les pakacge s dispo pour vim
 
 apt-cache search vim
 
-et pour installer 
+et pour installer
 
 apt-get install vim
 
@@ -489,30 +491,30 @@ on peut alors modifier le .bashrc
 cd /home/ubuntu/
 vim .bashrc
 
-feel free to do a tutorial on vim 
-to exit 
+feel free to do a tutorial on vim
+to exit
 :wq
 
-
 ## 7. Process Management (20 minutes)
-derniere chose 
+
+derniere chose
 
 voir ce qui tourne sur une VM linux avec top et ps
 
 top: donne la liste des process qui tourne les plus intensif
-et le load average 
+et le load average
 
 ![](./../../img/ubuntu-top.png)
 
 à surveiller pour voir si la VM est bien dimensionnée
 
-et ps donne la list des process qui tourne 
+et ps donne la list des process qui tourne
 
-ps -ef et ps aux sont les dux config les plus utilisées. 
+ps -ef et ps aux sont les dux config les plus utilisées.
 
 ![](./../../img/ubuntu-ps.png)
 
-pas grand chose tourne sur cette instance. 
+pas grand chose tourne sur cette instance.
 
 On peut combiner avec grep pour filtrer les process
 
@@ -521,21 +523,16 @@ Par exemple pour trouver les process liés a postgresql, a nginx:
 ps aux | grep postgres
 ps aux | grep nginx
 
-la sortie de ps aux est envoyée directement a grep keyword 
-
+la sortie de ps aux est envoyée directement a grep keyword
 
 ## 9. Environment Variables (15 minutes)
 
 - Understanding PATH
 
-
-
 # next workshop
 
-
-container on Alpine 
+container on Alpine
 
 install nginx
 get webpage
-serve webpage 
-
+serve webpage
