--- a/docs/02/S02.01.intro.md
+++ b/docs/02/S02.01.intro.md
@@ -19,7 +19,7 @@ Pourquoi ?
 - Les 2 tiers ou plus des serveurs web sont du Linux
 - La majorité des images docker sont construites sur une image de base linux
 
-Il y a plus de 600 distributions (Distro) Linux active. Parmi celles ci Ubuntu compte pour 34%, suivi par Debian
+Il y a plus de 600 distributions (Distro) Linux active. Parmi celles ci, Ubuntu compte pour 34%, suivi par Debian
 
 Donc Linux c'est
 
