--- a/docs/02/S02.05.linux-cowsay.exercice.md
+++ b/docs/02/S02.05.linux-cowsay.exercice.md
@@ -6,46 +6,76 @@ Dans cet exercice on va installer un program dans un container linux
 
 On va aborder le package manager, le PATH, et le pipe
 
-Lancez un container Ubuntu et allez dans le bash
+1. lancez un container Ubuntu et allez dans le bash
+2. installez le programme `cowsay`
+3. exécutez `cowsay "hello world"`
 
-installez le programme cowsay
+Ça ne marche pas!
 
-executez cowsay ...
+Le shell ne trouve pas le programme pourtant vous l'avez bien installé.
 
-ca ne marche pas
+Mais où est le programme ?
 
-l'OS ne trouve pas le program
-iou est le programme : which whereis ...
+## Le PATH
 
-Le PATH
+> PATH est une variable d'environnement dans les systèmes Linux qui indique au shell où chercher les fichiers exécutables. Elle contient une liste de répertoires, et lorsque vous exécutez une commande, le système recherche dans ces répertoires pour trouver l'exécutable correspondant.
+
+```bash
 echo $PATH
+```
 
-il faut ajouter le path au PATH
+retourne
+
+```bash
+/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+```
+
+Maintenant, exécutez:
+
+```bash
+which cowsay
+```
+
+et
+
+```bash
+whereis cowsay
+```
+
+> `which cowsay` This command searches for the cowsay executable in the directories listed in your $PATH environment variable. It only returns the path to the executable if it's found in one of those directories.
+> `whereis cowsay`: This command searches for the cowsay executable, along with its source code and man pages, in standard locations (not just $PATH). It returns the path to the binary, source, and man page if available.
+
+Donc si `which cowsay` ne retourne rien, c'est que le répertoire n'est pas dans le PATH.
+
+Il faut ajouter le path `/usr/games/` où se trouve le programme `cowsay`  à la variable d'environnement PATH.
+
+### ajouter un path au `PATH`
 
 dans la session
 
-export
+```bash
+export PATH=$PATH:/usr/games/
+```
+
+puis affichez le $PATH (`echo $PATH`) et vérifiez que le path est dans le`PATH`
 
 ensuite
-cowsay ..
 
-ca marche
+```bash
+cowsay "bonjour le monde"
+```
 
-man cowsay
+Ça marche!
 
-use Tux
+et avec le pingouin
 
-Faire de meme avec fortune
+```bash
+cowsay -f tux "bonjour le monde"
+```
 
-install
-add to PATH ?
+## A vous
 
-maintenant lier fortune et cowsay avec pipe
+1. installer le programme `fortune`, l'ajouter au $PATH si nécessaire.
+2. `pipe` la sortie de `fortune` dans `cowsay`
 
-fun
-
-mettre la commande dans un script bash ?
-
-changer les permissions pour le rendre executable
-
-exit le container, start and exec cowsay
+![fortune pip cowsay](./../../img/memes/fortune-pipe-cowsay.png)
